tests/ui/type-alias-impl-trait/issue-68368-non-defining-use.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-68368-non-defining-use.rs:9:29
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                - this generic parameter of the opaque must be used with a generic type parameter
LL |
LL | fn f<'a>() -> Alias<'a, ()> {}
   |                             ^^ expected generic type parameter, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
